[project]
name = "just-psf"
dynamic = ["version"]
description = "Just get me a topology, for god’s sake!"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

authors = [
  {name = "Pierre Beaujean", email = "pierre.beaujean@unamur.be" }
]

maintainers = [
  {name = "Pierre Beaujean", email = "pierre.beaujean@unamur.be" }
]

classifiers = [
    # For a list of valid classifiers, see https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "numpy",
    "scipy",
    "networkx"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-quotes",
    "autopep8",
    "bump2version",
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/pierre-24/just-psf"
"Bug Reports" = "https://github.com/pierre-24/just-psf/issues"
"Source" = "https://github.com/pierre-24/just-psf/"

[project.scripts]
'just-psf' = 'just_psf.scripts.just_psf:main'
'just-rtf' = 'just_psf.scripts.just_rtf:main'

[tool.setuptools]
packages = ['just_psf', 'just_psf.scripts', 'just_psf.parsers']

[tool.setuptools.dynamic]
version = {attr = "just_psf.__version__"}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]